--- a/index.html
+++ b/index.html
@@ -9,20 +9,34 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=Pacifico&family=Righteous&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+  <!-- Are your Sure Layer -->
+  <div id="sureLayer" class="d-none sureLayer d-flex align-items-center justify-content-center position-fixed h-100 w-100 bg-black bg-opacity-50 z-3">
+    <div class="box d-flex flex-column bg-white p-3 rounded w-25">
+      <div class="text-center mb-4">
+        <h4>Are your Sure?</h4>
+      </div>
+
+      <div class="d-flex justify-content-center flex-wrap gap-2">
+        <button onclick="deleteWebsite(websiteIndex)" class="btn btn-visit">YES</button>
+        <button onclick="deleteLayer(sureLayer)" class="btn btn-red">NO</button>
+      </div>
+    </div>
+  </div>
 
   <!-- Edit Layer -->
   <div id="editLayer" class="editLayer d-none d-flex align-items-center justify-content-center position-fixed h-100 w-100 bg-black bg-opacity-50 z-3">
     <div class="box d-flex flex-column bg-white p-3 rounded w-25">
       <div class="d-flex align-items-center justify-content-between mb-4">
         <h4>Edit Bookmark</h4>
-        <button onclick="deleteLayer()" class="exit"><i class="fa-solid fa-xmark fs-4"></i></button>
+        <button onclick="deleteLayer(editLayer)" class="exit"><i class="fa-solid fa-xmark fs-4"></i></button>
       </div>
       <div class="box mb-4 w-100">
         <label for="websiteEditName" class="form-label fw-bold"><i class="fa-solid fa-book-bookmark me-2"></i>Site Name</label>
@@ -66,7 +80,7 @@
 
     <hr>
 
-    <table class="table text-center text-capitalize mt-4">
+    <table class="table text-center text-capitalize mt-4 rounded rounded-3 overflow-hidden">
       <thead>
         <th>index</th>
         <th>Website Name</th>
@@ -80,6 +94,9 @@
       </tbody>
     </table>
 
+    <div class="text-center">
+      <button id="deleteAllBTN" onclick="deleteAll()" class="d-none btn btn-red px-5">Delete All</button>
+    </div>
   </div>
 
 
