--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     </div>
   </div>
 
+  <!-- Error Layer -->
+  <div id="errorLayer" class="errorLayer text-center p-3 rounded w-25 z-3">
+    <h4 class="m-0"><button onclick="hideErrorLayer()" class="exit"><i class="fa-solid fa-xmark fs-4"></i></button> Please Fill the inputs!</h4>
+  </div>
+
   <div class="container py-5">
 
     <h1 class="logo my-5">Bookmarker</h1>
